--- a/Static/css/estilos.css
+++ b/Static/css/estilos.css
@@ -798,6 +798,15 @@ transition: .55s;
 .clasesRespuestas > ul > li > ul > a {
   text-decoration: none;
   color: #333645;
+  
+}
+.clasesRespuestas > ul > li > ul > a > li{
+  list-style: none;
+  margin-left: 8px;
+  margin-top: 5px;
+}
+.clasesRespuestas > ul > li > ul > a > li:hover{
+  font-weight: bold;
 }
 .clasesRespuestas > ul > li > ul > a > li {
   margin-top: 10px;
@@ -916,12 +925,13 @@ transition: .55s;
   align-items: center;
 }
 .contenidoCalificaciones {
-  width: 20%;
-  margin-left: 40%;
+  width: 40%;
+  margin-right: 30px;
   height: auto;
-  background-color: #e4e4e4;
+  background-color: #fbfaff;
+  box-shadow: 4px 4px 15px 6px rgba(0,0,0,0.75);
   border-radius: 10px;
-  margin-bottom: 100px;
+  margin-bottom: 20px;
   padding-top: 20px;
   padding-bottom: 20px;
 }
@@ -929,14 +939,12 @@ transition: .55s;
   text-decoration: none;
   color: #333645;
 }
-.descripcionCalificaciones {
-  width: 100%;
-  height: auto;
-  background-color: #e4e4e4;
-  border-radius: 10px;
-  padding-top: 20px;
-  padding-bottom: 20px;
-  margin-bottom: 20px;
+.contenidoCalificaciones > ul > li > ul > a > li{
+  margin-left: 15px;
+  margin-top: 6px;
+}
+.contenidoCalificaciones > ul > li > ul > a > li:hover{
+ font-weight: bold;
 }
 .contenidoCalificaciones > p {
   font-weight: bold;
@@ -945,26 +953,66 @@ transition: .55s;
 }
 .contenidoCalificaciones > ul > li {
   margin-left: 25px;
+  
 }
+.descripcionCalificaciones {
+  width: 100%;
+  height: auto;
+  background-color: #fbfaff;
+  border-radius: 10px;
+  padding-top: 20px;
+  padding-bottom: 20px;
+  margin-bottom: 20px;
+  box-shadow: 4px 4px 15px 6px rgba(0,0,0,0.75);
+}
+.descripcionCalificaciones > ul {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
 .descripcionCalificaciones > ul > li {
   margin-left: 25px;
   font-weight: bold;
+  margin-bottom: 6px;
+  list-style: none;
+  margin-top: 8px;
+  
 }
 .descripcionCalificaciones > ul > ul > li {
-  margin-left: 25px;
+  margin-left: 40px;
+  list-style: none;
+  
+}
+.EjerciciosT{
+  margin-top: 10px;
+  
+}
+.EjerciciosB{
+  margin-top: 15px;
+  display: flex;
+  margin-bottom: 10px;
+  margin-right: 60px;
+ 
 }
 .contenedorCalificaciones {
   width: 90%;
+  display: flex;
+  
 }
 .btn-actualiza-calificaciones {
   width: 90px;
   height: 22px;
   border: none;
   color: white;
-  background-color: #00b0ff;
+  background-color: #0075ff;
   border-radius: 4px;
   transition: 0.5s;
   cursor: pointer;
+}
+.btn-actualiza-calificaciones:hover{
+  background-color: #3390ff;
+  border: 2px solid #0075ff;
 }
 /*--------Estilos Ejercicios Maestro------------*/
 .principalEjercicios {
@@ -1093,18 +1141,66 @@ transition: .55s;
 
 .botonCerrar{
   margin-top: 15px;
-  background-color: #00B0FF;
+  background-color:  #0075ff;
   border-radius: 15px;
   width: 30%;
   height: 1.5rem;
   margin-left: 35%;
   padding-top:7px ;
+  color: white;
 }
 .botonCerrar:hover{
   cursor: pointer;
 }
+.botonCerrar:active{
+  background-color: #005dcc;
+}
+.contenidoRestablecer{
+  height: 80vh;
+  overflow: hidden
+}
+.contenidotextoRestablecer{
+  height: 80vh;
+}
 
-
+.formRestablecer{
+  margin-top: 55px;
+  display: flex;
+  flex-direction: column;
+  height: 80vh;
+}
+.errorlist{
+  color: black;
+}
+.modalblack{
+  color: black;
+  font-weight: 600;
+}
+.formRestablecer div{
+  color: white;
+  text-align: center;
+}
+.formRestablecer span{
+  font-size: 25px;
+  font-weight: bold;
+  
+}
+.formRestablecer-title{
+  margin-bottom: 10px;
+}
+.formRestablecer li{
+  line-height: 25px;
+}
+.tabla{
+  margin-top: 20px;
+  margin-bottom: 20px;
+  align-self: center;
+  justify-self: center;
+}
+.tablaRestablecer{
+  table-layout: fixed;
+  
+}
 
 /*-----------------------------------------------*/
 @media (max-width: 1122px) {
