--- a/Templates/navbar.html
+++ b/Templates/navbar.html
@@ -43,9 +43,10 @@
                                 
                             </div>
                         </div>
-                                <div class="navbar-logout navbar-avatar">
+                                <div class="navbar-logout navbar-avatar" onclick="eliminarSessionStorage()">
                                     <div >
                                         <a href="{% url 'cerrarSesion' %}">
+                                            ">
                                             <img src="{% static 'img/logout.png' %}" alt="" class="img-logout">
                                         </a>
                                     </div>
