--- a/compilador/css/compilador.css
+++ b/compilador/css/compilador.css
@@ -5,7 +5,6 @@
     
 }
     /* Escritorio */
-@media screen and (min-width: 768px){
 
     #Principal{
         width: 100%;
@@ -135,14 +134,13 @@
 
     .opciones{
         font-size: 17px;
-        cursor: pointer;
-      
-        
         width: 120px;
         height: 40px;
+        transition: 0.75s;
     }
     .opciones:hover{
         background-color: rgb(66, 69, 86);
+        border-radius: 6px;
     }
     .img-profile{
         width: 100%;
@@ -174,6 +172,9 @@
         height: 47%;
         background-color: #424556;
         box-shadow: 2px 2px 8px 0px rgb(43, 42, 45);
+        display: flex;
+        justify-content: center;
+        align-items: center;
     }
     #mid-container-ajuste{
         justify-content:space-between;
@@ -188,8 +189,8 @@
     #compilador-top{
         width: 100%;
         height: 15%;
-       
         display: flex;
+        justify-content: space-between;
     }
     #compilador-bottom{
         width: 100%;
@@ -200,44 +201,250 @@
         box-shadow: 2px 2px 8px 0px rgb(43, 42, 45);
     }
     #titulo{
-        display: flex;
-        align-items: center;
-        width: 60%;
+        
         color: white;
-        padding-left: 20px;
+        padding-top: 17px;
+        
+    }
+    .databases{
+        margin-top: -8px;
+    }
+    #tituloDB{
+        
+        color: white;
+        
     }
     #buttons{
-        width: 35%;
-        
         height: 100%;
         display: flex;
-        justify-content: end;
+        justify-content: flex-end;
         align-items: center;
+        
+    }
+
+    .modal-container {
+        position: fixed;
+        display: flex;
+        align-items: center;
+        background-color: rgba(0,0,0,0.3);
+        top: 0;
+        left: 0;
+        height: 100vh;
+        width: 100vw;
+        justify-content: center;
+        opacity: 0;
+        pointer-events: none;
+        z-index: 999;
+      }
+      .modal-container.show {
+        
+        opacity: 1;
+        pointer-events: auto;
+      }
+      .modal-container2 {
+        position: fixed;
+        display: flex;
+        align-items: center;
+        background-color: rgba(0,0,0,0.3);
+        top: 0;
+        left: 0;
+        height: 100vh;
+        width: 100vw;
+        justify-content: center;
+        opacity: 0;
+        pointer-events: none;
+        z-index: 999;
+      }
+      .modal-container2.show {
+        
+        opacity: 1;
+        pointer-events: auto;
+      }
+      .modal-container3 {
+        position: fixed;
+        display: flex;
+        align-items: center;
+        background-color: rgba(0,0,0,0.3);
+        top: 0;
+        left: 0;
+        height: 100vh;
+        width: 100vw;
+        justify-content: center;
+        opacity: 0;
+        pointer-events: none;
+        z-index: 999;
+      }
+      .modal-container3.show {
+        
+        opacity: 1;
+        pointer-events: auto;
+      }
+      .modal_imagen{
+          width: 70px;
+          height: 40px;
+      }
+      .modal_imagen img{
+        width: 700px;
+        height: 530px;
+    }
+      .modalC{
+        background-color: #fff;
+        width: auto;
+        max-height: 100%;
+        max-width: 100%;
+        border-radius: 5px;
+        padding: 30px 50px;
+        text-align: center;
+      }
+      .modalHistorial{
+        background-color: #fff;
+        width: 70%;
+        height: auto;
+        max-height: 50%;
+        display: flex;
+        flex-direction: column;
+        border-radius: 5px;
+        padding: 30px 50px;
+        text-align: center;
+        overflow: auto;
+        align-items: center;
+        overflow-x: hidden;
+      }
+      #historia{
+          padding: 10px;
+          width: 80%;
+      }
+      #historia tbody tr td{
+        color: black;
+        padding: 15px;
+        font-family:'Roboto Mono', monospace;
+        text-align: center;
+        letter-spacing: .6px;
+        text-transform: uppercase;
+        border: 5px transparent;
+    }
+    #historia tbody tr{
+        background-color: white;
+       
+    }
+    #historia tbody tr td:hover{
+        background-color: #e8f2fe;
+        color: black;
+    }
+      .modaltitle{
+          font-weight: bold;
+          font-size: 20px;
+          padding-bottom: 10px;
+          
+      }
+      .cerrarHistorial{
+        cursor: pointer;
+        margin-top: 25px;
+        background-color: #0075ff;
+        border-radius: 15px;
+        width: 30%;
+        height: 1.6rem;
+        
+        padding-top:6px ;
+        padding-bottom: 6px;
+        color: white;
+      }
+      .botonCerrar{
+        margin-top: 15px;
+        background-color: #0075ff;
+        border-radius: 15px;
+        width: 30%;
+        height: 1.5rem;
+        margin-left: 35%;
+        padding-top:7px ;
+        color: white;
+      }
+      .botonCerrar:hover{
+        cursor: pointer;
+        background-color: #3390ff;
+      }
+      .botonCerrar:active{
+          background-color: #005dcc;
+      }
+
+    #tituloDB{
+        text-align: center;
+        font-weight: 500;
+    }
+    #openDB1{
+        background-color:  #0075ff;
+        border: 0;
+        width: 125px;
+        height: 25px;
+        color: white;
+        border-radius: 5px;
+        margin-right: 5px;
+    }
+    #openDB1:hover{
+        cursor: pointer;
+        background-color:  #3390ff;
+    }
+    #openDB1:active{
+        background-color: #005dcc;
+    }
+    #openDB2{
+        background-color:  #0075ff;
+        border: 0;
+        width: 125px;
+        height: 25px;
+        color: white;
+        border-radius: 5px;
+        margin-left: 5px;
+    }
+    #openDB2:hover{
+        cursor: pointer;
+        background-color:  #3390ff;
+    }
+    #openDB2:active{
+        background-color: #005dcc;
     }
     #play{
-        background-color: rgb(38, 166, 154);
+        background-color: rgb(50, 143, 7);
+        color: white !important;
+        
+        border: none;
+        transition: .85s;
     }
+    
     #play:hover{
-        background-color: rgb(44, 189, 174);
+        background-color: rgb(41, 117, 6) !important;
+        
+    
     }
-    #borrar{
+    #openHIST{
+        border:none;
        margin-right: 35px;
-       background-color: rgb(229, 115, 115);
+       background-color: #ED5A09;
+       transition: .55s;
+    }
+    #openHIST:hover{
+        background-color: rgb(187, 69, 6);
+     }
+    #borrar{
+       border:none;
+       margin-right: 35px;
+       background-color: #cd0006;
+       transition: .55s;
     }
     #borrar:hover{
        
-        background-color: rgb(243, 120, 120);
+        background-color: rgb(187, 69, 6);
      }
     #buttons>button{
         box-shadow: 6px 6px 13px 0px rgba(51,51,51,1);
        cursor: pointer;
-        width: 100px;
+        width: 80px;
         border-radius: 4px;
         color: white;
-        border:none;
-        height: 32px;
+        height: 28px;
         font-size: 1rem;
     }
+
 
     .number{
         width: 35px;
@@ -291,8 +498,232 @@
        
         
     }
-    
-    
+    #tablas-container{
+   
+        height: 100%;
+      
+        display: flex;
+        justify-content: start;
+        align-items: start;
+        overflow-y: auto;
+        overflow-x: auto;
+        width: 100%;
+        }
+        table {     font-family: "Lucida Sans Unicode", "Lucida Grande", Sans-Serif;
+            font-size: 12px;    margin: 10px;     width: 480px; text-align: left;    border-collapse: collapse; }
+        
+        th {     font-size: 13px;     font-weight: normal;     padding: 8px;     background: #3390ff;
+            border: 2px solid #0075ff;    border-bottom: 2px solid #0075ff; color: white; }
+        
+        td {    padding: 8px;    ;     border-bottom: 1px solid #fff;
+            color: #c2c4c3;    border-top: 1px solid transparent; }
+        
+        tr:hover td { background: #97a3cf; color: #339; }
+        table tr:nth-child(odd) {background-color: #e7e7e9;}
 
+        table tr:nth-child(even) {background-color: #f0f2f1;}
+        .botonesRestablecer{
+            display: flex;
+            align-items: center;
+            justify-content: center;
+        }
+        .botonesRestablecer a{
+            text-decoration: none;
+        }
+        #botonCambiarRestablecer{
+            background-color: rgb(50, 143, 7);
+            color: white !important;
+            width: 80px;
+            height: 25px;
+            border: none;
+            transition: .85s;
+        }
+        
+        #botonCambiarRestablecer:hover{
+            background-color: rgb(41, 117, 6) !important;
+            cursor: pointer;
+        
+        }
+        #botonRegresarRestablecer{
+            border:none;
+            width: 170px;
+            height: 25px;
+           margin-right: 35px;
+           background-color: #ED5A09;
+           transition: .55s;
+           text-decoration: none;
+        }
+        #botonRegresarRestablecer:hover{
+       
+            background-color: rgb(187, 69, 6);
+         }
+
+/* CSS LOADER */
+
+.lds-facebook {
+    display: inline-block;
+    position: relative;
+    width: 80px;
+    height: 80px;
+  }
+  .lds-facebook div {
+    display: inline-block;
+    position: absolute;
+    left: 8px;
+    width: 16px;
+    background: rgba(255, 255, 255, 0.7);
+    animation: lds-facebook 1.2s cubic-bezier(0, 0.5, 0.5, 1) infinite;
+  }
+  .lds-facebook div:nth-child(1) {
+    left: 8px;
+    animation-delay: -0.24s;
+  }
+  .lds-facebook div:nth-child(2) {
+    left: 32px;
+    animation-delay: -0.12s;
+  }
+  .lds-facebook div:nth-child(3) {
+    left: 56px;
+    animation-delay: 0;
+  }
+  @keyframes lds-facebook {
+    0% {
+      top: 8px;
+      height: 64px;
+    }
+    50%, 100% {
+      top: 24px;
+      height: 32px;
+    }
+  }
+
+.loader-container {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
+.container-opacity {
+    background-color: rgba(66, 69, 86, 0.1) !important;
+}
+
+.hide {
+    display: none;
+}
+
+.disabled {
+    background-color: rgba(50, 143, 7, 0.4) !important;
+    border: none !important;
+    color: #fff !important;
+    font-weight: bold;
+    cursor: auto !important;
+}
+
+/* TOAST */
+
+#snackbar {
+    visibility: hidden; /* Hidden by default. Visible on click */
+    min-width: 250px; /* Set a default minimum width */
+    margin-left: -125px; /* Divide value of min-width by 2 */
+    background-color: #333; /* Black background color */
+    color: #fff; /* White text color */
+    text-align: center; /* Centered text */
+    border-radius: 2px; /* Rounded borders */
+    padding: 16px; /* Padding */
+    position: fixed; /* Sit on top of the screen */
+    z-index: 1; /* Add a z-index if needed */
+    left: 50%; /* Center the snackbar */
+    bottom: 30px; /* 30px from the bottom */
+  }
+
+  .successfully {
+    background-color: rgba(50, 143, 7) !important;
+  }
+
+  .warning {
+    background-color: #ED5A09 !important;
+  }
+
+  .error {
+    background-color: rgb(185, 8, 8) !important;
+  }
+  
+  /* Show the snackbar when clicking on a button (class added with JavaScript) */
+  #snackbar.show {
+    visibility: visible; /* Show the snackbar */
+    /* Add animation: Take 0.5 seconds to fade in and out the snackbar.
+    However, delay the fade out process for 2.5 seconds */
+    -webkit-animation: fadein 0.5s, fadeout 0.5s 2.5s;
+    animation: fadein 0.5s, fadeout 0.5s 2.5s;
+  }
+  
+  /* Animations to fade the snackbar in and out */
+  @-webkit-keyframes fadein {
+    from {bottom: 0; opacity: 0;}
+    to {bottom: 30px; opacity: 1;}
+  }
+  
+  @keyframes fadein {
+    from {bottom: 0; opacity: 0;}
+    to {bottom: 30px; opacity: 1;}
+  }
+  
+  @-webkit-keyframes fadeout {
+    from {bottom: 30px; opacity: 1;}
+    to {bottom: 0; opacity: 0;}
+  }
+  
+  @keyframes fadeout {
+    from {bottom: 30px; opacity: 1;}
+    to {bottom: 0; opacity: 0;}
+  }
+  @media screen and (max-width:810px){
+    #openDB1{
+        background-color:  #0075ff;
+        border: 0;
+        width: 75px;
+        height: 25px;
+        color: white;
+        border-radius: 5px;
+        margin-right: 5px;
+        font-size: 10px;
+    }
+    
+    #openDB2{
+        background-color:  #0075ff;
+        border: 0;
+        width: 75px;
+        height: 25px;
+        color: white;
+        border-radius: 5px;
+        margin-left: 5px;
+        font-size: 10px;
+    }
+    
+  }
+  @media screen and (max-width:700px){
+    #openDB1{
+        background-color:  #0075ff;
+        border: 0;
+        width: 55px;
+        height: 25px;
+        color: white;
+        border-radius: 5px;
+        margin-right: 5px;
+        font-size: 6px;
+    }
+    
+    #openDB2{
+        background-color:  #0075ff;
+        border: 0;
+        width: 55px;
+        height: 25px;
+        color: white;
+        border-radius: 5px;
+        margin-left: 5px;
+        font-size: 6px;
+    }
+    
+  }
