Compile de nuevo en onclick
Habia retirado el compile del OnClock del boton de compilar para hacer las pruebas del historial

--- a/Templates/compilador.html
+++ b/Templates/compilador.html
@@ -15,7 +15,7 @@
             <div id="buttons">
                 <button id="openHIST">Historial</button>
                 <button id="borrar" onclick="limpiar()">Borrar</button>
-                <button id="play" onclick="historial(), recuperarValores()"> Ejecutar</button>
+                <button id="play" onclick="compile(), historial(), recuperarValores()"> Ejecutar</button>
             </div>
         </div>
         <div id="compilador-bottom">
