--- a/Templates/compilador.html
+++ b/Templates/compilador.html
@@ -33,37 +33,46 @@
 <div class="modal-container3" id="modal_container3">
     <div class="modalHistorial">
         <h1 class="modaltitle">HISTORIAL</h1>
-        <p>assadads</p>
-        <p>assadads</p>
-        <p>assadads</p>
-        <p>assadads</p>
-        <p>assadads</p>
-        <p>assadads</p>
-        <p>assadads</p>
-        <p>assadads</p>
-        <p>assadads</p>
-        <p>assadads</p>
-        <p>assadads</p>
-        <p>assadads</p>
-        <p>assadads</p>
-        <p>assadads</p>
-        <p>assadads</p>
-        <p>assadads</p>
-        <p>assadads</p>
-        <p>assadads</p>
-        <p>assadads</p>
-        <p>assadads</p>
-        <p>assadads</p>
-        <p>assadads</p>
-        <p>assadads</p>
-        <p>assadads</p>
-        <p>assadads</p>
-        <p>assadads</p>
-        <p>assadads</p>
-        <p>assadads</p>
-        <p>assadads</p>
-        <p>assadads</p>
+        <table id="historia">
+            <tr>
+                <td>Selec sahjfhja from asjkhfjfhja as sajhajfhsjhfa where sajhhjsfagSelec sahjfhja from asjkhfjfhja as sajhajfhsjhfa where sajhhjsfagSelec sahjfhja from asjkhfjfhja as sajhajfhsjhfa where sajhhjsfagjhsfgsaf</td>
+            </tr>
+            <tr>
+                <td>Selec sahjfhja from asjkhfjfhja as sajhajfhsjhfa where sajhhjsfagjhsfgsaf</td>
+            </tr>
+            <tr>
+                <td>Selec sahjfhja from asjkhfjfhja as sajhajfhsjhfa where sajhhjsfagjhsfgsaf</td>
+            </tr>
+            <tr>
+                <td>Selec sahjfhja from asjkhfjfhja as sajhajfhsjhfa where sajhhjsfagjhsfgsaf</td>
+            </tr>
+            <tr>
+                <td>Selec sahjfhja from asjkhfjfhja as sajhajfhsjhfa where sajhhjsfagjhsfgsaf</td>
+            </tr>
+            <tr>
+                <td>Selec sahjfhja from asjkhfjfhja as sajhajfhsjhfa where sajhhjsfagjhsfgsaf</td>
+            </tr>
+            <tr>
+                <td>Selec sahjfhja from asjkhfjfhja as sajhajfhsjhfa where sajhhjsfagjhsfgsaf</td>
+            </tr>
+            <tr>
+                <td>Selec sahjfhja from asjkhfjfhja as sajhajfhsjhfa where sajhhjsfagjhsfgsaf</td>
+            </tr>
+            <tr>
+                <td>Selec sahjfhja from asjkhfjfhja as sajhajfhsjhfa where sajhhjsfagjhsfgsaf</td>
+            </tr>
+            <tr>
+                <td>Selec sahjfhja from asjkhfjfhja as sajhajfhsjhfa where sajhhjsfagjhsfgsaf</td>
+            </tr>
+            <tr>
+                <td>Selec sahjfhja from asjkhfjfhja as sajhajfhsjhfa where sajhhjsfagjhsfgsaf</td>
+            </tr>
+            <tr>
+                <td>Selec sahjfhja from asjkhfjfhja as sajhajfhsjhfa where sajhhjsfagjhsfgsaf</td>
+            </tr>
+        </table>
         <div class="cerrarHistorial" id="close3">Cerrar</div>
+        <div class="fix" ></div>
     </div>
 </div>
 
