--- a/Static/css/compilador.css
+++ b/Static/css/compilador.css
@@ -359,6 +359,18 @@
         padding-top:7px ;
         color: white;
       }
+      .fix{
+
+        margin-top: 25px;
+        background-color: white;
+        border-radius: 15px;
+        width: 30%;
+        height: 1.6rem;
+        
+        padding-top:6px ;
+        padding-bottom: 6px;
+        color: white;
+      }
       .botonCerrar:hover{
         cursor: pointer;
         background-color: #3390ff;
