Cambio de nombre URL de unidades
Habia un error en la sesion de alumnos en el que no se podia acceder al material didactico porque se empalmaban los nombres de las URL, cambié los nombres para que fueran distintos

--- a/Templates/maestro/dashboard.html
+++ b/Templates/maestro/dashboard.html
@@ -30,6 +30,7 @@
                     <li class="opciones"><a href="{% url 'respuestas31' %}" class="opcionRespuestas {% if request.path == '/ejercicios/respuestas31' %} active {%endif%}">Respuestas</a></li>
                     <li class="opciones"><a href="{% url 'getCalificaciones' %}" class="opcionCalificaciones {% if request.path == '/ejercicios/calificaciones' %} active {%endif%}">Calificaciones</a></li>
                     <li class="opciones"><a href="{% url 'ejercicios' %}" class="opcionEstado {% if request.path == '/ejercicios/ejercicios' %} active {%endif%}">Estado</a></li>
+                    <li class="opciones"><a href="{% url 'unidades1' %}" class="opcionHerramientas">Unidad</a></li>
                     </ul>
                     <div class="navbar-profile">
                         <!-- <div class="navbar-notification navbar-avatar">
