--- a/Templates/maestro/calificaciones.html
+++ b/Templates/maestro/calificaciones.html
@@ -28,6 +28,7 @@
                     <li class="opciones"><a href="{% url 'getCalificaciones' %}"
                             class="opcionCalificaciones {% if request.path == '/ejercicios/calificaciones' %} active {%endif%}">Calificaciones</a></li>
                     <li class="opciones"><a href="{% url 'ejercicios' %}" class="opcionHerramientas">Estado</a></li>
+                    <li class="opciones"><a href="{% url 'unidades1' %}" class="opcionHerramientas">Unidad</a></li>
                 </ul>
                 <div class="navbar-profile">
                     <!-- <div class="navbar-notification navbar-avatar">
