--- a/Static/css/estilosEjercicios.css
+++ b/Static/css/estilosEjercicios.css
@@ -310,6 +310,22 @@ box-shadow: 6px 6px 5px 0px rgba(50,50,69,1);
                         
                        
                     }
+                    .u3{
+                        
+                        width: 55px;
+                        height: 55px;
+                        margin-top: 5px;
+                        margin-left: 15px;
+                        margin-right: 15px;
+                        margin-bottom: 15px;
+                        border-radius: 10px;
+                        display: flex;
+                        justify-content: center;
+                        align-items: center;
+                        text-decoration-line: none;
+                        font-size: 22px;
+                       
+                    }
                     a {
                         text-decoration-line: none;
                         display: flex;
