added ejercicios en vez de estado

--- a/Templates/maestro/unidades.html
+++ b/Templates/maestro/unidades.html
@@ -22,7 +22,7 @@
                     <li class="opciones"><a href="{% url 'dashboard' %}" class="opcionInicio">Inicio</a></li>
                     <li class="opciones"><a href="{% url 'respuestas31' %}" class="opcionContenido">Respuestas</a></li>
                     <li class="opciones"><a href="{% url 'getCalificaciones' %}" class="opcionHerramientas">Calificaciones</a></li>
-                    <li class="opciones"><a href="{% url 'ejercicios' %}" class="opcionEstado ">Estado</a></li>
+                    <li class="opciones"><a href="{% url 'ejercicios' %}" class="opcionEstado ">Ejercicios</a></li>
                     <li class="opciones"><a href="{% url 'unidades1' %}" class="opcionHerramientas {% if request.path == '/ejercicios/unidades1' %} active {%endif%}">Unidad</a></li>
                 </ul>		
                 <div class="navbar-profile">
