--- a/Templates/maestro/calificaciones.html
+++ b/Templates/maestro/calificaciones.html
@@ -27,7 +27,7 @@
                     <li class="opciones"><a href="{% url 'respuestas31' %}" class="opcionContenido">Respuestas</a></li>
                     <li class="opciones"><a href="{% url 'getCalificaciones' %}"
                             class="opcionCalificaciones {% if path == 'calificaciones' %} active {%endif%}">Calificaciones</a></li>
-                    <li class="opciones"><a href="{% url 'ejercicios' %}" class="opcionHerramientas">Estado</a></li>
+                    <li class="opciones"><a href="{% url 'ejercicios' %}" class="opcionHerramientas">Ejercicios</a></li>
                     <li class="opciones"><a href="{% url 'unidades1' %}" class="opcionHerramientas">Unidad</a></li>
                 </ul>
                 <div class="navbar-profile">
