--- a/Templates/maestro/dashboard.html
+++ b/Templates/maestro/dashboard.html
@@ -29,7 +29,7 @@
                         <li class="opciones"><a href="{% url 'dashboard' %}" class="opcionInicio {% if request.path == '/ejercicios/dashboard' %} active {%endif%}">Inicio</a></li>
                     <li class="opciones"><a href="{% url 'respuestas31' %}" class="opcionRespuestas {% if request.path == '/ejercicios/respuestas31' %} active {%endif%}">Respuestas</a></li>
                     <li class="opciones"><a href="{% url 'getCalificaciones' %}" class="opcionCalificaciones {% if request.path == '/ejercicios/calificaciones' %} active {%endif%}">Calificaciones</a></li>
-                    <li class="opciones"><a href="{% url 'ejercicios' %}" class="opcionEstado {% if request.path == '/ejercicios/ejercicios' %} active {%endif%}">Estado</a></li>
+                    <li class="opciones"><a href="{% url 'ejercicios' %}" class="opcionEstado {% if request.path == '/ejercicios/ejercicios' %} active {%endif%}">Ejercicios</a></li>
                     <li class="opciones"><a href="{% url 'unidades1' %}" class="opcionHerramientas">Unidad</a></li>
                     </ul>
                     <div class="navbar-profile">
