--- a/Templates/maestro/respuestas31.html
+++ b/Templates/maestro/respuestas31.html
@@ -30,7 +30,7 @@
 					<li class="opciones"><a href="{% url 'respuestas31' %}" class="opcionRespuestas {% if path == 'respuestas31' %} active {%endif%}">Respuestas</a></li>
 					<li class="opciones"><a href="{% url 'getCalificaciones' %}"
 							class="opcionHerramientas">Calificaciones</a></li>
-					<li class="opciones"><a href="{% url 'ejercicios' %}" class="opcionHerramientas">Estado</a></li>
+					<li class="opciones"><a href="{% url 'ejercicios' %}" class="opcionHerramientas">Ejercicios</a></li>
 					<li class="opciones"><a href="{% url 'unidades1' %}" class="opcionHerramientas">Unidad</a></li>
 				</ul>
 				<div class="navbar-profile">
