added unidades en lugar de unidad

--- a/Templates/maestro/ejercicios.html
+++ b/Templates/maestro/ejercicios.html
@@ -23,7 +23,7 @@
                     <li class="opciones"><a href="{% url 'respuestas31' %}" class="opcionContenido">Respuestas</a></li>
                     <li class="opciones"><a href="{% url 'getCalificaciones' %}" class="opcionHerramientas">Calificaciones</a></li>
                     <li class="opciones"><a href="{% url 'ejercicios' %}" class="opcionEstado {% if request.path == '/ejercicios/ejercicios' %} active {%endif%}">Ejercicios</a></li>
-                    <li class="opciones"><a href="{% url 'unidades1' %}" class="opcionHerramientas">Unidad</a></li>
+                    <li class="opciones"><a href="{% url 'unidades1' %}" class="opcionHerramientas">Unidades</a></li>
                 </ul>		
                 <div class="navbar-profile">
                     <!-- <div class="navbar-notification navbar-avatar">
