--- a/Templates/maestro/addUsers.html
+++ b/Templates/maestro/addUsers.html
@@ -29,7 +29,7 @@
                     <li class="opciones"><a href="{% url 'getCalificaciones' %}"
                             class="opcionCalificaciones {% if request.path == '/ejercicios/calificaciones'   %} active {%endif%}">Calificaciones</a></li>
                     <li class="opciones"><a href="{% url 'ejercicios' %}" class="opcionHerramientas">Ejercicios</a></li>
-                    <li class="opciones"><a href="{% url 'unidades1' %}" class="opcionHerramientas">Unidad</a></li>
+                    <li class="opciones"><a href="{% url 'unidades1' %}" class="opcionHerramientas">Unidades</a></li>
                 </ul>
                 <div class="navbar-profile">
                     <!-- <div class="navbar-notification navbar-avatar">
