--- a/Templates/maestro/dashboard.html
+++ b/Templates/maestro/dashboard.html
@@ -30,7 +30,7 @@
                     <li class="opciones"><a href="{% url 'respuestas31' %}" class="opcionRespuestas {% if request.path == '/ejercicios/respuestas31' %} active {%endif%}">Respuestas</a></li>
                     <li class="opciones"><a href="{% url 'getCalificaciones' %}" class="opcionCalificaciones {% if request.path == '/ejercicios/calificaciones' %} active {%endif%}">Calificaciones</a></li>
                     <li class="opciones"><a href="{% url 'ejercicios' %}" class="opcionEstado {% if request.path == '/ejercicios/ejercicios' %} active {%endif%}">Ejercicios</a></li>
-                    <li class="opciones"><a href="{% url 'unidades1' %}" class="opcionHerramientas">Unidad</a></li>
+                    <li class="opciones"><a href="{% url 'unidades1' %}" class="opcionHerramientas">Unidades</a></li>
                     </ul>
                     <div class="navbar-profile">
                         <!-- <div class="navbar-notification navbar-avatar">
