--- a/Templates/maestro/respuestas31.html
+++ b/Templates/maestro/respuestas31.html
@@ -31,7 +31,7 @@
 					<li class="opciones"><a href="{% url 'getCalificaciones' %}"
 							class="opcionHerramientas">Calificaciones</a></li>
 					<li class="opciones"><a href="{% url 'ejercicios' %}" class="opcionHerramientas">Ejercicios</a></li>
-					<li class="opciones"><a href="{% url 'unidades1' %}" class="opcionHerramientas">Unidad</a></li>
+					<li class="opciones"><a href="{% url 'unidades1' %}" class="opcionHerramientas">Unidades</a></li>
 				</ul>
 				<div class="navbar-profile">
 					<!-- <div class="navbar-notification navbar-avatar">
